--- a/log.css
+++ b/log.css
@@ -7,8 +7,8 @@
 
 body{
     
-    /*align-items: center;
-    justify-content: center;*/
+    align-content: center;
+    justify-content: center;
     min-height: 100vh;
     width: 100%;
     background: url(images/aa.jpg);
@@ -40,7 +40,7 @@ body{
     justify-self: center;
     align-self: center;
     width: 60%;
-    margin: 10% 20% 0 20%;
+    /* margin: 10% 20% 0 20%; */
     padding: 0;
     border: 1px solid rgba(225, 225, 225, 0.5);
     border-radius: 8px;
@@ -213,5 +213,11 @@ button:hover{
         margin-top: 7px;
         border-radius: 3px;
         border: 2px solid transparent;
+    }
+}
+
+@media only screen and (max-width:600px){
+    .login-wrapper{
+        width: 85%;
     }
 }
