--- a/voters.css
+++ b/voters.css
@@ -12,25 +12,6 @@
     --transition: all 0.3s ease;
 }
 
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', 'Segoe UI', sans-serif;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    width: 100%;
-    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="20" cy="20" r="1" fill="%23ffffff" opacity="0.1"/><circle cx="80" cy="40" r="1" fill="%23ffffff" opacity="0.05"/><circle cx="40" cy="80" r="1" fill="%23ffffff" opacity="0.1"/></pattern></defs><rect width="100" height="100" fill="%23134e32"/><rect width="100" height="100" fill="url(%23grain)"/></svg>');
-    background-repeat: repeat;
-    background-attachment: fixed;
-    color: var(--text-light);
-    background-size: cover;
-} */
-
 .container {
     max-width: 1400px;
     /* margin: 20px auto; */
@@ -265,7 +246,7 @@ body {
 .voters-table {
     margin: 0;
     width: 100%;
-    boarder: none;
+    border: none;
     border-radius: var(--border-radius);
     overflow: hidden;
     border-collapse: collapse;
@@ -287,11 +268,13 @@ body {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.voters-table tr {
+    color: var(--text-dark);
+}
 .voters-table td {
     padding: 10px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.05);
     vertical-align: middle;
-    color: var(--text-light);
 }
 
 .voters-table tr:hover {
