--- a/log.css
+++ b/log.css
@@ -12,6 +12,7 @@ body{
     min-height: 100vh;
     width: 100%;
     background: url(images/aa.jpg);
+    /* background-color: green; */
     background-repeat: no-repeat;
     background-position: left;
     background-size: cover;
